--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-S3_BUCKET_IMAGES_URL=https://storage.googleapis.com/estebanvergaragiraldo/pokeneas
+S3_BUCKET_URL=https://storage.googleapis.com/estebanvergaragiraldo-pokeneas/
