--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=80
 S3_BUCKET_URL=https://storage.googleapis.com/estebanvergaragiraldo-pokeneas
-BASE_URL=http://your-node-ip-or-domain
+BASE_URL=http://35.192.56.55
